add navigation bar section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
+    
+<!-- NAVIGATION BAR -->
+<nav>
+    <label for="" class="nav"><a href="">The Norris</a></label>
+    <ul class="nav-link">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">AboutUs</a></li>
+        <li><a>Jokes</a></li>
+        <li><a>Subscribe</a></li>
+    </ul>
+    <button class="nav"><a>ContactUs</a></button>
+</nav>
+
+ 
     <script src="/index.js"></script>
 </body>
 </html>
