--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
     <span class="dot"></span> 
     <span class="dot"></span> 
    </div>
+
+<!-- FOOTER SECTION -->
+<footer></footer>
+
+
   
     <script src="/index.js"></script>
 </body>
