add footer class

--- a/index.html
+++ b/index.html
@@ -256,7 +256,41 @@
    </div>
 
 <!-- FOOTER SECTION -->
-<footer></footer>
+<footer>
+<div class="footer"> 
+    <div class="left">
+        <label for="" class="nav"><a href="">The Norris</a></label>
+        <p>We give you the time of your life</p>
+    </div>
+    <ul>
+        <li class="title"><a href="">About</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Humour</a></li>
+        <li><a href="">Our History</a></li>
+    </ul>
+
+    <ul>
+        <li class="title"><a href="">Resources</a></li>
+        <li><a href="">Give Feedback</a></li>
+        <li><a href="">Status</a> </li>
+        <li><a href="">Privacy & Policy</a></li>
+    </ul>
+    
+    
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+</footer>
 
 
   
