--- a/index.html
+++ b/index.html
@@ -276,20 +276,22 @@
         <li><a href="">Privacy & Policy</a></li>
     </ul>
     
-    
+    <div class="socials">
+        <h2>Get us on</h2>
+        <div class="right">
+            <img src="/assets/Images/icons8-play-store-24.png" alt="playstore">
+            <img src="/assets/Images/icons8-apple-logo-24.png" alt="applestore">
+     </div>
 
+     <p>Or reach out via</p>
+     <div class="media">
+        <img src="/assets/Images/icons8-twitter-circled-50.png" alt="twitter">     
+        <img src="/assets/Images/icons8-instagram.svg" alt="Insta">
+        <img src="/assets/Images/icons8-facebook-50.png" alt="fb">
+     </div>
+
+    </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
 </footer>
 
 
