--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <ul class="nav-link">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">AboutUs</a></li>
-        <li><a>Jokes</a></li>
-        <li><a>Subscribe</a></li>
+        <li><a href="#jokes">Jokes</a></li>
+        <li><a href="#subscribe">Subscribe</a></li>
     </ul>
     <button class="nav"><a>ContactUs</a></button>
 </nav>
