--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
 <!-- HOME SECTION -->
 <div class="Homepage">
-
-    <h1>Looking for Funny Jokes ? </h1>
-    <h3>You're in the right place .</h3>
+     <div class="content">
+    <h1 id="funny">Looking for Funny Jokes ? </h1>
+    <h2 id="place">You're in the right place .</h2>
+    </div>
                 <div class="image">
     <img src="./assets/Images/jokes.png" alt="" width="900">
          </div>
