--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 </div>
 
      <!-- About Us -->
-     <img src="/assets/Images/Brilliantemoji.jpg" alt="" width="900">
-    <p>Humour is something that is funny, something that makes us smile, laugh and roll on the floor laughing, 
+    <div class="About">
+       <img src="/assets/Images/Brilliantemoji.jpg" alt="" width="900">
+          <p>Humour is something that is funny, something that makes us smile, laugh and roll on the floor laughing, 
         The Humour aims to give our users moments  where they  can just smile or hysterically laugh . Have you ever forgotten a time when you laughed like crazy or cried like a baby? That’s what we want you to experience.</p>
+    </div>
     
    <!-- Random Jokes -->
 <div class="Random">
