Modify and style About Us section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 </div>
 
      <!-- About Us -->
+     <div id="info">
+     <h2>About Us</h2>
+     </div>
     <div class="About">
        <img src="/assets/Images/Brilliantemoji.jpg" alt="" width="900">
           <p>Humour is something that is funny, something that makes us smile, laugh and roll on the floor laughing, 
