--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
     </div>
 
     <!-- jokes -->
-    <button >CLICK HERE <img src="/assets/Images/icons8-hand-up-50.png" alt=""></button>
+    <div class="click">
+         <button >CLICK HERE <img src="/assets/Images/icons8-hand-up-50.png" alt=""></button>
     
-    <input type="text" value="">
+         <input type="text" value="">
+    </div>
 
 
 
