style click button

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <!-- jokes -->
     <div class="click">
-         <button >CLICK HERE <img src="/assets/Images/icons8-hand-up-50.png" alt=""></button>
+         <button id="viewjokes">CLICK HERE <img id="hand"  src="/assets/Images/icons8-hand-up-50.png" alt="" ></button>
     
-         <input type="text" value="">
+         <input id="in" type="text" value="">
     </div>
 
 
