--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- jokes -->
     <div class="click">
-         <button id="viewjokes">CLICK HERE <img id="hand"  src="/assets/Images/icons8-hand-up-50.png" alt="" ></button>
+         <button id="viewjokes">CLICK HERE  VIEW JOKES <img id="hand"  src="/assets/Images/icons8-hand-up-50.png" alt="" ></button>
     
          <p id="in"> </p>
     </div>  
