--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <div class="About">
        <img src="/assets/Images/Brilliantemoji.jpg" alt="" width="900">
           <p>Humour is something that is funny, something that makes us smile, laugh and roll on the floor laughing, 
-        The Humour aims to give our users moments  where they  can just smile or hysterically laugh . Have you ever forgotten a time when you laughed like crazy or cried like a baby? That’s what we want you to experience.</p>
+        The Norris aims to give our users moments  where they  can just smile or hysterically laugh . Have you ever forgotten a time when you laughed like crazy or cried like a baby? That’s what we want you to experience.</p>
     </div>
 
     <!-- jokes -->
     <div class="click">
-         <button id="viewjokes">CLICK HERE  VIEW JOKES <img id="hand"  src="/assets/Images/icons8-hand-up-50.png" alt="" ></button>
+         <button id="viewjokes">CLICK HERE^^ FOR JOKES <img id="hand"  src="/assets/Images/icons8-hand-up-50.png" alt="" ></button>
     
          <p id="in"> </p>
     </div>  
