add contact info

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
         <div class="socials">
             <h2>Get us on</h2>
             <div class="right">
+                <h3>Contact info: 0798321217</h3>
                 <img src="/assets/Images/icons8-play-store-24.png" alt="playstore">
                 <img src="/assets/Images/icons8-apple-logo-24.png" alt="applestore">
             </div>
