modify html,css of mediaqueries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
+    <div class="query">
 
 <!-- NAVIGATION BAR -->
 <nav>
@@ -246,7 +247,7 @@
     </footer>
     
 
-  
+  </div>
     <script src="index.js"></script>
 </body>
 </html>
