Laptop media query

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
      </div>
     <div class="About">
        <img id="emoji" src="assets/Images/Brilliantemoji.jpg" alt="" width="500">
-          <p>Humour is something that is funny, something that makes us smile, laugh and roll on the floor laughing, 
-        The Norris aims to give our users moments  where they  can just smile or hysterically laugh . Have you ever forgotten a time when you laughed like crazy or cried like a baby? That’s what we want you to experience.</p>
+       <div class="humour">  <p>Humour is something that is funny, something that makes us smile, laugh and roll on the floor laughing, 
+        The Norris aims to give our users moments  where they  can just smile or hysterically laugh . Have you ever forgotten a time when you laughed like crazy or cried like a baby? That’s what we want you to experience.</p></div>
     </div>
 
     <!-- jokes -->
