modify random section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          <p id="in"> </p>
     </div>  
    <!-- Random Jokes -->
-   <div id="random"><h1> Random Jokes </h1></div>
+   <div id="rj"><h1> Random Jokes </h1></div>
 <div class="Random">
     
    
@@ -96,8 +96,9 @@
    
    
     </div>
-    
-    <button type="button" class="btn"><a href="#viewjokes">Explore Jokes</a></button>
+    <div class="btn">
+    <button type="button" class="explorebtn"><a href="#viewjokes">Explore Jokes</a></button>
+    </div>
 </div>
 
  <!--  REVIEWS -->
